--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,12 +6,12 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="Settings"
+        android:title="@string/settingsMn"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_open_notes"
         android:orderInCategory="100"
-        android:title="Записная книжка"
+        android:title="@string/notesMn"
         app:showAsAction="never" />
 </menu>
